@@ -178,6 +178,7 @@ Chris Poblete, Dell
 11/08/2010 [ 3101155 ] Failed to load provider libraries due to symbol conflicts
 11/08/2010 [ 3101148 ] SfcbLocal method parameter type conversion and validation
 11/10/2010 [ 3101154 ] Daemon clients failed SfcbLocal connect due to permission
+03/08/2011 [ 3202420 ] CDATA value in a string property is improperly XML escaped
 
 Josef Moellers
 --------------
