@@ -10,6 +10,7 @@ Bugs fixed:
 - 3185178 Wrong classname for returned instances from execQuery
 - 3175770 execQuery returns multiple instances of same object
 - 3203290 Basic Auth Should Consider Expired Passwords
+- 3202420 CDATA value in a string property is improperly XML escaped
 
 Changes in 1.3.10
 =================
